Interim commit - further work on Meal planner. Includes further work on dao/column machinery